liblscp - LinuxSampler Control Protocol API
-------------------------------------------

ChangeLog

CVS HEAD           Bugfix in lscp_client_subscribe(): only the first
                   lscp_client_subscribe() call succeeded (per client),
                   all subsequent ones failed.

                   Added support for new (un)subscribable events:
                     LSCP_EVENT_CHANNEL_MIDI
                   Caution: the bitflag approach for the event variable
                   is now abondoned, since otherwise we would soon hit the
                   limit of the bit range. The bitflag approach will
                   remain for events older at this point (that is all
                   events which occupy the lower 16 bits), but this new
                   and all following events will simply be enumared along
                   the upper 16 bits.

                   Added new client interface function, for renaming
                   effect send entities:
                     lscp_set_fxsend_name();

0.5.5  2007-10-12  Changed client interface function, for editing
                   instrument, from:
                     lscp_edit_instrument();
                   to:
                     lscp_edit_channel_instrument();

0.5.4  2007-10-02  Added new client interface function, for editing
                   instrument:
                     lscp_edit_instrument();

                   Fixed some minor bugs in:
                     lscp_set_fxsend_midi_controller();
                     lscp_set_fxsend_level();

0.5.3  2007-01-15  Added new client interface functions, for sampler
                   channel effect sends control:
                     lscp_set_fxsend_midi_controller();
                     lscp_set_fxsend_level();

                   Added new field member to lscp_fxsend_info_t (level).

0.5.2  2007-01-11  Added new client interface functions, for sampler
                   channel effect sends control: